compiler-core/src/parse/snapshots/gleam_core__parse__tests__list_spread_followed_by_another_spread.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\npub fn main() -> Nil {\n  let xs = [1, 2, 3]\n  let ys = [5, 6, 7]\n  [..xs, 4, ..ys]\n}\n"
---
----- SOURCE CODE

pub fn main() -> Nil {
  let xs = [1, 2, 3]
  let ys = [5, 6, 7]
  [..xs, 4, ..ys]
}


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:5:13
  │
5 │   [..xs, 4, ..ys]
  │             ^^ I wasn't expecting a spread here

Hint: use list.append(list1, list2) to join two lists.
See: https://hexdocs.pm/gleam_stdlib/gleam/list.html#append
