compiler-core/src/parse/snapshots/gleam_core__parse__tests__lowercase_constructor_name_in_custom_type.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\npub type Wibble {\n  wibble(Int, String)\n}\n"
---
----- SOURCE CODE

pub type Wibble {
  wibble(Int, String)
}


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:3:3
  │
3 │   wibble(Int, String)
  │   ^^^^^^ I'm expecting a type name here

Hint: Type names start with a uppercase letter, and can contain a-z, A-Z,
or 0-9.
